Cassia can give the Blood Chalice quest, even if NH was a wanted thief.
Cassia cannot be paid for learning to pickpocket if it's already learned.
Cassias quests become obsolete if the paladins kill her.
Cavalorn gives much less gold for buying the farmer's clothes.
Cornelius' diary cannot be stolen before learning of him being a witness to the murder.
Diego cannot be led to Pedrakhan.
Diego's dialog has 6 more previously unused dialogue lines and 9 more if NH never met him in Valley of Mines.
Dragomir immediately equips his crossbow after receiving it.
Edda does not have duplicate dialog option, moved dialog lines around appropriately.
Edda gives her own fish soup instead of normal soup.
Elvrich won't react to weapons until he's returned to town.
Engardo noticing a pick pocket attempt causes the fight with the farmers to start.
Engor will not have his trade inventory on his body once the castle gate is breached.
Esteban does not turn to his guards if they are dead.
Esteban first dialog sends Carlos to Ramon's guard post, if NH killed Ramon.
Esteban only says Franco was a tough nut if he is dead.
Esteban's bodyguards go running to meet Fisk.
Farim will go down to the pub and drink one for his buddy William, just like he says he will.
Fernando can only be accused after being told about the bandit weapons dealer by Vatras.
Fernando will not consider a bandit rapier or the trade guild ring alone to be sufficient evidence.
Fernando will properly close the bandit weapons dealer quest if NH gives him the evidence.
Ferros actually takes an offered sword from NH and inspects it when the dialog indicates so.
Ferros can be offered alternative sword more than one time.
Ferros dialog options are properly ordered when learning from him.
Ferros no longer stops the dialogue if NH asks him what he would give for finding his sword.
Ferros' learning log entry is added to correct category.
Franco can be asked about whereabouts of Edgor only before talking to him.